tests/errors/comb-group-in-control.expect
---CODE---
1
---STDERR---
Error: Malformed Structure: 
7 |    group a {
  |          ^ Group with constant done condition not allowed inside normal control operators
